align fix

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -109,6 +109,7 @@ header p {
     position: absolute;
     top: 0;
     height: 100%;
+    justify-content: center;
 }
 
 .heroContentWrapper .topTitleWrapper {
